# goofin

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: CMakeLists.txt  clang_format.cmake
licenses/: INFO.md
src/: CMakeLists.txt
src/dummyconsumer/: CMakeLists.txt  Drawpool.cxx  main.cxx
src/dummylib/: CMakeLists.txt  Drawpool.cxx  Drawpool.h  IDummy.h  Lazyguy.cxx  Lazyguy.h
src/scoped-enum/: CMakeLists.txt  a.out  scopedEnumBoostDemo.cxx  scopedEnumDemo.cxx
src/templatedLib/: ITemplateInterface.h
src/teragen-libnoise/: CMakeLists.txt  teramain.cxx
